// proto/placement.proto
syntax = "proto3";

package vectron.placementdriver.v1;

option go_package = "github.com/pavandhadge/vectron/wroker/proto/placementdriver";

// ===============================================
// Placement Driver — The Brain of Vectron
// ===============================================

service PlacementService {
  // Get worker address for a collection + optional vector ID (for consistent hashing)
  rpc GetWorker(GetWorkerRequest) returns (GetWorkerResponse) {}

  // Worker registers itself on startup
  rpc RegisterWorker(RegisterWorkerRequest) returns (RegisterWorkerResponse) {}

  // Worker sends heartbeat (every 5s)
  rpc Heartbeat(HeartbeatRequest) returns (HeartbeatResponse) {}

  // List all workers (for monitoring)
  rpc ListWorkers(ListWorkersRequest) returns (ListWorkersResponse) {}

  // Admin: force rebalance (future)
  rpc Rebalance(RebalanceRequest) returns (RebalanceResponse) {}

  // Collection management
  rpc CreateCollection(CreateCollectionRequest) returns (CreateCollectionResponse) {}
  rpc ListCollections(ListCollectionsRequest) returns (ListCollectionsResponse) {}
  rpc DeleteCollection(DeleteCollectionRequest) returns (DeleteCollectionResponse) {}
}

// ===============================================
// Messages
// ===============================================

message GetWorkerRequest {
  // Collection name (required)
  string collection = 1;

  // Optional: vector ID for consistent hashing
  // If empty → use collection-level sharding
  string vector_id = 2;
}

message GetWorkerResponse {
  // Full address: "10.0.0.42:6201" or "worker-3.internal:6201"
  string address = 1;

  // Optional: shard info
  uint32 shard_id = 2;
}

message RegisterWorkerRequest {
  string address = 1;     // "10.0.0.42:6201"
  repeated string capabilities = 2; // ["gpu", "large-memory"]
  int64 timestamp = 3;
}

message RegisterWorkerResponse {
  string worker_id = 1;   // assigned by placement driver
  bool success = 2;
}

message HeartbeatRequest {
  string worker_id = 1;
  int64 timestamp = 2;
  // Optional metrics
  int64 vector_count = 3;
  int64 memory_bytes = 4;
}

message HeartbeatResponse {
  // If false → worker is considered dead
  bool ok = 1;
  // Optional: config updates
  string message = 2;
}

message ListWorkersRequest {}

message ListWorkersResponse {
  repeated WorkerInfo workers = 1;
}

message WorkerInfo {
  string worker_id = 1;
  string address = 2;
  repeated string collections = 3;
  int64 last_heartbeat = 4;
  bool healthy = 5;
  map<string, string> metadata = 6;
}

message RebalanceRequest {
  // Future use
}

message RebalanceResponse {
  bool started = 1;
}

message CreateCollectionRequest {
  string name = 1;
  int32 dimension = 2;
  string distance = 3;
}

message CreateCollectionResponse {
  bool success = 1;
}

message ListCollectionsRequest {}

message ListCollectionsResponse {
  repeated string collections = 1;
}

message DeleteCollectionRequest {
  string name = 1;
}

message DeleteCollectionResponse {
  bool success = 1;
}
